[ci skip] Update with d620d11

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
       </header>
       <div class="book-page">
         <h1><a id="h"></a>はじめに</h1>
-<p>ここにはなんでこの本を書くに至ったかなど熱い思いを書きます。</p>
+<p>本書は以前に頒布した「Steins;GateでGitを説明する」本、「Steins;Git」の番外編となります。目的として「GitやGitHubでSteins;Gateの世界観を説明する」があります。対象読者は「GitやGitHubをよく使い、Steins;Gateに興味がある人」です。本書を通じてSteins;Gateに興味を持っていただけたら幸いです。</p>
+
+<h2><a id="h-1"></a>本書の構成</h2>
+<p>本書は次の2章により構成されています。</p>
+
+<h3><a id="h-1-1"></a>第1章 Steins;Gateとは何か？</h3>
+<p>Steins;Gateについて簡単に解説をします。まずはGitやGitHub関係なくSteins;Gateについて知ってもらうことで、この後の話を分かりやすくします。</p>
+
+<h3><a id="h-1-2"></a>第2章 GitでSteins;Gateを説明する</h3>
+<p>GitやGitHubがどのようにSteins;Gate内で使うと思われるか書いていきます。</p>
       </div>
       <nav class="book-navi book-prev">
               </nav>
